--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "rabbitcms/payments",
+    "license": "MIT",
     "authors": [
         {
             "name": "Kulyk Dmytro",
@@ -8,7 +9,9 @@
     ],
     "require": {
         "rabbitcms/modules": "^1.5.1",
-        "illuminate/support": "^5.4.0"
+        "illuminate/support": "^5.4.0",
+        "illuminate/database": "^5.4.0",
+        "psr/log": "^1.0"
     },
     "autoload": {
         "psr-4": {
