--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "rabbitcms/modules": "^1.5.1",
         "illuminate/support": "^5.4.0",
         "illuminate/database": "^5.4.0",
-        "psr/log": "^1.0"
+        "psr/log": "^1.0",
+        "symfony/psr-http-message-bridge": "^1.0",
+        "zendframework/zend-diactoros": "^1.3"
     },
     "autoload": {
         "psr-4": {
