--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,8 @@
     ],
     "require": {
         "rabbitcms/modules": "^1.5.1 | ^2.0",
-        "illuminate/support": "^5.4.0",
-        "illuminate/database": "^5.4.0",
+        "illuminate/support": "^5.4.0 | ^6.0",
+        "illuminate/database": "^5.4.0 | ^6.0",
         "psr/log": "^1.0",
         "symfony/psr-http-message-bridge": "^1.0",
         "zendframework/zend-diactoros": "^1.3"
