--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,11 @@
         }
     ],
     "require": {
-        "illuminate/database": "^5.4.0 | ^6.0 | ^7.0",
-        "illuminate/support": "^5.4.0 | ^6.0 | ^7.0",
+        "illuminate/database": ">=7.0",
+        "illuminate/support": ">=7.0",
         "nyholm/psr7": "^1.2",
         "psr/log": "^1.0",
-        "rabbitcms/modules": "^1.5.1 | ^2.0",
+        "rabbitcms/modules": "^2.0",
         "symfony/psr-http-message-bridge": "^2.0",
         "zendframework/zend-diactoros": "^1.3"
     },
