--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,12 @@
         "symfony/psr-http-message-bridge": "^2.0",
         "zendframework/zend-diactoros": "^1.3"
     },
+    "provide": {
+        "dtkt/service-provider-impl": "1.0"
+    },
+    "suggest": {
+        "dtkt/service-manager": "Adds support for configuration over admin (^1.0)"
+    },
     "autoload": {
         "psr-4": {
             "RabbitCMS\\Payments\\": "src/"
